# macro-nowcaster

./: .gitignore  Dockerfile  METHODOLOGY.md  Makefile  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: snapshot.json  streamlit_app.py
config/: indicators.yaml
flows/: update_flow.py
notebooks/: 01_walkthrough.ipynb
scripts/: export_snapshot.py
src/macro_nowcaster/: __init__.py  benchmarks.py  config.py  pipeline.py
src/macro_nowcaster/api/: main.py
src/macro_nowcaster/backtest/: allocation.py  pseudo_realtime.py
src/macro_nowcaster/data/: fred_client.py  store.py  validation.py
src/macro_nowcaster/features/: transforms.py
src/macro_nowcaster/llm/: fed_rag.py  memo_agent.py
src/macro_nowcaster/models/: dfm.py  midas.py  recession.py  regime.py
src/macro_nowcaster/monitoring/: drift.py
tests/: test_core.py
